# RwxDevice

./: .Rbuildignore  Changes.html  DESCRIPTION  NAMESPACE  Todo  configure.in  run
R/: wxDevice.R
Web/: GNUmakefile  configure  index.html.in
inst/examples/: clip.R  lattice.R
man/: asWxDevice.Rd  wx.Rd
src/: EventLoop.h  Makevars.in  Rdevice.h  Todo  devices.cpp  wxDevice.cpp  wxDevice.h
